--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -1,6 +1,10 @@
 ﻿<div class="contenido animatio ng-enter" id="holas">
     <label class="titulo">Crear Documento</label>
     <div>
+        <label class="subtitulos_labels">
+            Identificacion del documento
+        </label>
+        <hr class="divisor_gestion_documental" />
         <form id="informacion_documento">
             <div>
                 <label class="texto_labels" for="tipo-documento">Tipo de Documento:</label>
