--- a/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
@@ -1,9 +1,11 @@
 ﻿<div class="contenido animatio ng-enter" id="holas">
     <label class="titulo">Crear Documento</label>
     <div>
+        <label class="subtitulos_labels">
+            Asunto
+        </label>
+        <hr class="divisor_gestion_documental" />
         <form>
-            <label class="texto_labels" for="asunto">Asunto</label>
-            <hr />
             <textarea class="text_area" rows="4" cols="50" ng-model="vm.documento.asunto"></textarea>
 
             <!--<button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.pergunta-anotacion">Siguiente</button>-->
