--- a/WebLegemClient/src/css/plantillas/busqueda.css
+++ b/WebLegemClient/src/css/plantillas/busqueda.css
@@ -111,28 +111,25 @@
     -webkit-flex-direction:column;
     flex-direction:column;
     padding:5px;
-    background:white;
-    -webkit-box-shadow: 1px 1px 2px  rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 1px 1px 2px  rgba(0, 0, 0, 0.5);
-    box-shadow: 1px 1px 2px  rgba(0, 0, 0, 0.5);
+    border: 1px dotted rgba(153, 153, 153, 0.40);
 }
 
 .content_li_filtro{
     display: -webkit-flex;
     display:flex;
     width:100%;
-    background:white;
-    border-radius:5px;
-    margin-bottom:10px;
+    margin-bottom:5px;
+    border-bottom:1px dotted rgba(153, 153, 153, 0.40);
 }
 
-.li_left{
-     -ms-flex-direction:column;
-    -webkit-flex-direction:column;
+.li_left {
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    width:80%;
+    width: 80%;
 }
 
 .li_right{
@@ -143,7 +140,7 @@
 .tip{
     padding:0 5px;
     color:#4DBD88;    
-    font-size:1em;
+    font-size:.9em;
     font-family:'Franklin Gothic'; 
     text-align:left;    
    }
@@ -157,13 +154,63 @@
 .btn_filtro_avanzada{
     border:none;
     background:transparent;
-    color:#ff6262;
+    color: #636262;
     font-size:x-large;
     cursor:pointer;
 }
 
+.btn_filtro_avanzada:hover{
+    color: rgba(99, 98, 98, 0.7);
+}
+
+.btn_filtro_avanzada:active{
+    color: rgba(99, 98, 98, 0.4);
+}
+
 /*------Fin Filtros------*/
 
+
+/*--------Resultados---------*/
+    
+.res_bus{
+    list-style:none;
+}
+
+#titulo_bus{
+    color:#009900;
+    font-size:1em;
+    font-family:'Arial Rounded MT';
+    font-weight:bold;
+    padding-bottom:5px;
+}
+#contenido_bus {
+    color: #000;
+    font-family: 'Arial Unicode MS';
+    font-size: .9em;
+    text-align: justify;
+}
+#entidad_bus, #fecha_bus{
+    display:inline;
+    color:#757575;
+    font-size:.8em;
+    font-family:Arial;
+    padding-right:3px;
+}
+
+#entidad_bus:after, #fecha_bus:after{
+    content:'|';
+    color:#757575;
+    display:inline-block;
+    white-space:nowrap; 
+}
+
+.res_bus > li{
+    border-bottom: 3px dotted rgba(100, 137, 0, 0.56) ;
+    padding-bottom:10px;
+    margin-bottom:30px;
+}
+
+/*------Fin Resultados--------*/
 
 
 
