--- a/WebLegemClient/src/css/plantillas/busqueda_contraste.css
+++ b/WebLegemClient/src/css/plantillas/busqueda_contraste.css
@@ -5,7 +5,7 @@
 
 #tabContainer {
 	width:100%;
-	background-color:white;
+	background-color:black;
 }
 
 .tabpage{
@@ -18,7 +18,7 @@
 
 #tabs{
 	height:30px;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #12ff00;
 }
 
 #tabs > ul{
@@ -30,7 +30,7 @@
 	margin:0 2px 0 0;
 	padding:5px 10px;
 	display:inline;
-	color:#999999;
+	color:rgb(242, 242, 242);
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	user-select: none;
@@ -45,8 +45,8 @@
 }
 
 #tabs > ul > li.tabActiveHeader{/*tab activa*/	
-	border-bottom: 3px solid #3bc742;   
-    color: #999999;
+	border-bottom: 3px solid #12ff00;   
+    color: white;
     font-weight:bold;
     font-size:14px;
 }
@@ -92,12 +92,12 @@
 }
 
 .btn_search_avanzada{
-    background:rgba(55, 64, 74, 0.31);
+    background:rgb(255, 250, 0);
     line-height:1.8;
     border:1px solid rgba(153, 153, 153, 0.40);
     width:30px;
     height:30px;
-    color:white;
+    color:black;
     font-size:large;
     cursor:pointer;
 }
@@ -185,21 +185,21 @@
 }
 
 #titulo_bus{
-    color:#009900;
+    color:#00fff7;
     font-size:1em;
     font-family:'Arial Rounded MT';
     font-weight:bold;
     padding-bottom:5px;
 }
 #contenido_bus {
-    color: #000;
+    color: white;
     font-family: 'Arial Unicode MS';
     font-size: .9em;
     text-align: justify;
 }
 #entidad_bus, #fecha_bus{
     display:inline;
-    color:#757575;
+    color:#ffffff;
     font-size:.8em;
     font-family:Arial;
     padding-right:3px;
@@ -207,13 +207,13 @@
 
 #entidad_bus:after, #fecha_bus:after{
     content:'|';
-    color:#757575;
+    color:#ffffff;
     display:inline-block;
     white-space:nowrap; 
 }
 
 .res_bus > li{
-    border-bottom: 3px dotted rgba(100, 137, 0, 0.56) ;
+    border-bottom: 3px dotted rgb(0, 255, 247) ;
     padding-bottom:10px;
     margin-bottom:30px;
 }
