--- a/WebLegemClient/src/css/elementos/barra_navegacion.css
+++ b/WebLegemClient/src/css/elementos/barra_navegacion.css
@@ -1,9 +1,7 @@
 ﻿.contenedor_navegacion{
     position: relative;
     height: 40px;
-    background:#000000
-/*    background-image: url('../recursos/header/green-texture_1280x720_sc.jpg');*/
-    
+    background:#000000; 
 }
 
 /*barra de navegacion*/
