--- a/WebLegemClient/src/css/estilos_weblegem_contraste.css
+++ b/WebLegemClient/src/css/estilos_weblegem_contraste.css
@@ -2,10 +2,10 @@
 /*---------------------------*/
 
 .titulo{
-    color: white;
+    color: black;
     text-align:center;
     height:auto;
-    background:  #37404A;
+    background:  white;
     border-radius:4px 4px 0 0;
     display:block;
     padding:0.5em;
@@ -27,18 +27,18 @@
 /*TEXTO PARA LOS LABELS*/
 .texto_labels{
     display:block;
-    color:#434e58;
+    color:white;
     font-size:1em;
     font-family:'Franklin Gothic';
 }
 
 .subtitulos_labels{
     display:block;
-    color:#434e58;
+    color:#ffffff;
     font-size:.9em;
     font-family:'Franklin Gothic';
 }
 
 .divisor_gestion_documental{
-    border: solid 1px #434e58;
+    border: solid 1px #4cff00;
 }
